@@ -14,11 +14,13 @@ public class Ex5 {
     public static void main(String[] args) {
         String redText = "\u001B[31mJOKER\u001B[0m";
         String blackText = "\u001B[30mJOKER\u001B[0m";
-        List<String> cardSuitSymbols = Arrays.asList("\u2665", "\u2666", "\u2663", "\u2660");
-        List<Integer> cardRanks = new ArrayList<>();
+        List<String> cardSuitSymbols = List.of("\u001B[30m♠\u001B[0m", "\u001B[31m♥\u001B[0m", "\u001B[30m" +
+                "♣\u001B[0m", "\u001B[31m♦\u001B[0m");
+        List<String> cardRanks = new ArrayList<>();
         // 使用循环添加点数（1 到 13）到集合中
-        for (int rank = 1; rank <= 13; rank++) {
-            cardRanks.add(rank);
+        String count[] = { "3", "4", "5", "6", "7", "8", "9", "10", "J", "Q", "K", "A","2"};
+        for (int rank = 0; rank <13; rank++) {
+            cardRanks.add(count[rank]);
         }
         List<String> poke = new ArrayList<>();
 
@@ -33,15 +35,35 @@ public class Ex5 {
         //System.out.println(poke);
 
         int num = (poke.size()-2 )/3;
-        List result = new LinkedList();
+        List<List<String>> result = new LinkedList();
 
         for (int i = 1; i <= 3; i++) {
             result.add(poke.stream().skip(num*(i-1)).limit(num).collect(Collectors.toList()));
         }
         result.add(poke.stream().skip(3*num).collect(Collectors.toList()));
+        String[] CARD_ORDER = {
+                "3", "4", "5", "6", "7", "8", "9", "10", "J", "Q", "K", "A", "2",
+                "\u001B[30mJOKER\u001B[0m","\u001B[31mJOKER\u001B[0m",
+        };
+        for (int i = 0; i < 4; i++) {
+            Collections.sort(result.get(i),(e1,e2)->{
+                String s1= e1.toString();
+                String s2= e2.toString();
+                Integer index1 = Arrays.asList(CARD_ORDER).indexOf(s1.substring(1));
+                Integer index2 = Arrays.asList(CARD_ORDER).indexOf(s2.substring(1));
+                if(s1.equals(redText))return 1;
+                else if(s2.equals(redText))return -1;
+                if(s1.equals(blackText)&&!s2.equals(redText))return 1;
+                else if(s2.equals(blackText)&&!s1.equals(redText))return -1;
+                else
+                return index1-index2;
+            });
+        }
+
         System.out.println("玩家1:"+result.get(0));
         System.out.println("玩家2:"+result.get(1));
         System.out.println("玩家3:"+result.get(2));
         System.out.println("底牌"+result.get(3));
+
     }
 }
